--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site settings
 title: Drop
-subtitle: by apehex
 description: >- # this means to ignore newlines until "baseurl:"
   A responsive site template designed by <a href="apehex@protonmail.com">DM</a> for <a href="https://github.com/apehex">apehex</a>.<br />
   It’s responsive, built on HTML5/CSS3, and entirely free<br />
@@ -27,13 +26,14 @@ slack_url: https://github.com/apehex
 twitter_url: https://github.com/apehex
 
 # Optional elements
-logo_url: /assets/images/logo.svg
-favicon_url: /assets/images/favicon.ico
-legal_terms_url: /legal-terms
-privacy_policy_url: /privacy-policy
-
-# Privacy policy
-hosting_third_party: github
+logo: /assets/images/logo.png
+favicon: /assets/images/favicon.ico
+legal_terms:
+  url: /en/legal-terms/
+privacy_policy:
+  url: /en/privacy-policy/
+  third_party:
+    hosting: github
 
 # Collections
 collections:
